--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.feibian004.myapp"
+      "package": "com.feibian004.myapp",
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/favicon.png"
