--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.9",
+    "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.0",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.4",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.71.5",
     "typescript": "^4.9.4"
   },
   "private": true
