--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,11 @@
       "distribution": "internal",
       "ios": {
         "resourceClass": "m-medium"
+      },
+      "android": {
+        "buildType": "apk"
       }
+
     },
     "production": {
       "autoIncrement": true,
